# archangel-fleet

./: Cargo.toml  data  todo.md
src/: generators.rs  logger.rs  main.rs  rate.rs  tests.rs
src/database/: mod.rs
src/entities/: mod.rs
src/entities/agent/: mod.rs
src/entities/ship/: mod.rs
src/scripts/: header.rhai  mod.rs  test.rhai
src/scripts/api/: mod.rs
