[package]
name = "archangel-fleet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacedust = "1.0.8"
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
struct_db = "0.3.1"
colored = "2.0.0"
time = { version = "0.3.21", features = ["macros"] }
async-trait = "0.1.68"
leaky-bucket-lite = "0.5.2"
futures = "0.3.28"
rhai = "1.14.0"
arguments = "0.7.1"
